Fixed spacing between rows in change log

--- a/www/custom.css
+++ b/www/custom.css
@@ -209,7 +209,12 @@ a:hover {
 /* || CHANGELOG */
 #shiny-tab-tabChangelog td:first-child {
   white-space:nowrap;
-  padding: 10px;
+  padding-right: 10px;
+  padding-bottom:10px;
+}
+
+#shiny-tab-tabChangelog td:nth-child(2) {
+  padding-bottom: 10px;;
 }
 
 #fileInfo.recalculating::before {
